--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -108,69 +108,30 @@ body {
 }
 
 .link {
-  text-decoration: overline;
+  text-decoration: none;
   color: white;
   font-size: 14px;
   transition: all 0.5s;
   text-align: center;
 }
 
-.navbar {
-  position: absolute;
-  margin-left: 9rem;
-}
-.navbar__list {
-  list-style: none;
-  display: inline-block;
-  padding: 1rem;
-}
-.navbar__link {
-  text-decoration: none;
-  color: white;
-  font-size: 14px;
-  transition: all 0.5s;
-}
-
-.text {
-  color: rgb(156, 156, 156);
-  font-size: 14px;
-}
-.text-decoration {
-  text-decoration: line-through;
-}
-
 .btn {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  display: inline-block;
-  width: 140px;
-  height: 45px;
   margin: 1rem 2rem;
+  width: 220px;
+  height: 46px;
+  left: 50%;
+  right: 50%;
   text-decoration: none;
   line-height: 45px;
   border-radius: 45px;
   text-align: center;
   letter-spacing: 1px;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 700;
   color: black;
   background: rgb(239, 239, 239);
-}
-.btn__view {
-  display: flex;
-  justify-content: center;
-}
-
-.btn1 {
-  box-sizing: border-box;
   position: absolute;
-  width: 220px;
-  height: 46px;
-  left: 172px;
-  top: 200px;
-  border: 2px solid #FADE4B;
-  border-radius: 28px;
+  left: 625px;
 }
 
 .swiper {
@@ -187,65 +148,124 @@ body {
 }
 
 .card {
+  position: relative;
   width: 352px;
   height: 280px;
+  padding: 2rem;
+  margin: 2rem;
   background: rgb(239, 239, 239);
   border-radius: 20px;
+  text-align: center;
+  display: inline-block;
+}
+.card__image {
+  width: auto;
+  height: 160px;
 }
 .card__description {
-  padding: 2rem;
   text-align: left;
   color: black;
   font-size: 14px;
 }
 .card__price {
-  padding: 2rem;
   text-align: right;
   color: black;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 700;
 }
-.card__image {
-  width: 90%;
-  padding: 2rem;
-  justify-content: center;
-  position: relative;
+.card__ellipse {
+  position: absolute;
+  bottom: 10%;
+  left: 60%;
+}
+.card__ellipse_discont {
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  color: white;
+  font-size: 18px;
+}
+.card__ellipse-red {
+  position: absolute;
+  bottom: 10%;
+  left: 60%;
+}
+.card__ellipse-red_discont {
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  color: black;
+  font-size: 18px;
 }
 
 .card1 {
-  width: 198px;
+  width: 200px;
   height: 256px;
-}
-.card1__description {
   padding: 2rem;
-  text-align: left;
-  color: rgb(156, 156, 156);
-  font-size: 16px;
-}
-.card1__price {
-  padding: 2rem;
-  text-align: left;
-  color: black;
-  font-size: 16px;
-  font-weight: 700;
+  margin: 2rem;
+  border: 2px solid black;
 }
 .card1__image {
   width: 100%;
   padding: 2rem;
-  justify-content: center;
+}
+.card1__price {
+  text-align: left;
+  color: black;
+  font-size: 16px;
+  font-weight: 700;
+}
+.card1__price_discont {
+  color: rgb(156, 156, 156);
+  font-size: 14px;
+  text-decoration: line-through;
+}
+.card1__description {
+  text-align: left;
+  color: rgb(156, 156, 156);
+  font-size: 14px;
+}
+
+.reviews {
+  width: 33.3333333333%;
+  padding: 1rem;
+}
+.reviews__image {
+  width: 100%;
+}
+.reviews__description {
+  padding: 0 2rem;
+  font-size: 18px;
+  text-align: center;
+}
+
+.instagram {
+  color: white;
+  position: relative;
+  text-align: center;
+  background: black;
+}
+.instagram__image {
+  background-color: rgb(239, 239, 239);
+  opacity: 0.6;
+}
+.instagram__description {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .product {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-.product__item {
-  margin: 1rem;
   padding: 2rem;
-  text-align: center;
-  background-color: black;
-  border-radius: 1rem;
+  margin: 1rem;
+}
+.product__image {
+  width: 1280px;
+  border-radius: 10px;
   cursor: pointer;
 }
 .product__title {
@@ -253,20 +273,53 @@ body {
   font-size: 32px;
   font-weight: 500;
   color: white;
+  text-align: left;
   position: absolute;
   top: 20%;
-  left: 40%;
+  left: 50%;
   transform: translate(-50%, -50%);
 }
 .product__description {
   padding: 1rem;
   font-size: 16px;
   color: rgb(156, 156, 156);
-  line-height: 1.5;
+  text-align: left;
   position: absolute;
   top: 30%;
-  left: 30%;
+  left: 40%;
   transform: translate(-50%, -50%);
+}
+.product__btn {
+  display: inline-block;
+  width: 220px;
+  height: 46px;
+  position: absolute;
+  left: 280px;
+  top: 200px;
+  margin: 1rem 2rem;
+  text-decoration: none;
+  line-height: 45px;
+  border-radius: 28px;
+  border: 2px solid #FADE4B;
+  text-align: center;
+  letter-spacing: 1px;
+  font-size: 16px;
+  font-weight: 700;
+  color: yellow;
+}
+.product__vector-l {
+  position: absolute;
+  width: 48px;
+  height: 48px;
+  left: 10px;
+  top: 187px;
+}
+.product__vector-r {
+  position: absolute;
+  width: 48px;
+  height: 48px;
+  right: 10px;
+  top: 187px;
 }
 
 .header {
@@ -276,7 +329,24 @@ body {
   background: black;
   padding: 2rem;
   width: 100%;
-  height: 15rem;
+  height: 20rem;
+  color: white;
+}
+.header__title {
+  padding: 2rem;
+  font-size: 32px;
+  font-weight: 700;
+  color: white;
+  cursor: pointer;
+}
+.header__burger {
+  padding: 2rem;
+  font-size: 18px;
+  font-weight: 700;
+  color: black;
+  cursor: pointer;
+  background-color: yellow;
+  border-radius: 10px;
 }
 
 .input {
@@ -285,6 +355,23 @@ body {
   border-radius: 60px;
   background-color: rgb(156, 156, 156);
   color: white;
+}
+
+.text {
+  padding: 2rem;
+  color: rgb(156, 156, 156);
+  font-size: 14px;
+  text-decoration: underline;
+}
+
+.icon {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  padding: 5rem;
+}
+.icon__description {
+  font-size: 14px;
 }
 
 .section {
@@ -310,7 +397,20 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 48px;
-  width: 200px;
+  justify-content: space-between;
+}
+.footer__navbar_column {
+  display: inline-block;
+  padding: 0 5rem;
+  width: 250px;
   height: 400px;
+}
+.footer__column {
+  display: inline-block;
+  padding: 5rem;
+  width: 400px;
+  height: 400px;
+}
+.footer__icons {
+  display: inline-flex;
 }/*# sourceMappingURL=main.css.map */
