--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -5,17 +5,62 @@
     padding: $p-2;
     
     width: 100%;
-    height: 15rem;
+    height: 20rem;
+    color: $color-white;
+
+    &__title {
+        padding: $p-2;
+
+        font-size: $font-32;
+        font-weight: $font-w-700;
+    
+        color: $color-white;
+        cursor: pointer;
+    }
+
+    &__burger {
+        padding: $p-2;
+
+        font-size: $font-18;
+        font-weight: $font-w-700;
+    
+        color: $color-black;
+        cursor: pointer;
+        background-color: $color-yellow;
+        border-radius: 10px;
+    }
 }
 
 .input {
     width: 459px;
     height: 56px;
-    // left: 465px;
-    // top: 61px;
+    
 
     border-radius: 60px;
 
     background-color: $color-gray;
     color: $color-white;
+}
+
+.text {
+    padding: $p-2;
+   
+    color: $color-gray;
+    font-size: $font-14;
+
+    text-decoration: underline;
+    
+}
+
+.icon {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    padding: $p-5;
+
+    &__description {
+        
+        font-size: $font-14;
+      
+    }
 }
