--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -147,6 +147,10 @@ body {
   background-color: white;
 }
 
+.card-mobile {
+  display: none;
+}
+
 .card {
   position: relative;
   width: 352px;
@@ -180,21 +184,21 @@ body {
 }
 .card__ellipse_discont {
   position: absolute;
-  bottom: 50%;
-  left: 50%;
-  color: white;
+  bottom: 25%;
+  left: 60%;
+  color: black;
   font-size: 18px;
 }
 .card__ellipse-red {
   position: absolute;
-  bottom: 10%;
+  bottom: 20%;
   left: 60%;
 }
 .card__ellipse-red_discont {
   position: absolute;
-  bottom: 50%;
-  left: 50%;
-  color: black;
+  bottom: 25%;
+  left: 60%;
+  color: white;
   font-size: 18px;
 }
 
@@ -203,10 +207,10 @@ body {
   height: 256px;
   padding: 2rem;
   margin: 2rem;
-  border: 2px solid black;
 }
 .card1__image {
-  width: 100%;
+  width: 150px;
+  height: 150px;
   padding: 2rem;
 }
 .card1__price {
@@ -413,4 +417,155 @@ body {
 }
 .footer__icons {
   display: inline-flex;
+}
+.footer__mobile {
+  display: none;
+}
+
+@media screen and (max-width: 591px) {
+  .block {
+    flex-direction: column;
+  }
+  .container {
+    max-width: 591px;
+    margin: 0 auto;
+  }
+  .header {
+    justify-content: left;
+    width: 100%;
+    height: 20rem;
+  }
+  .header__burger {
+    display: none;
+  }
+  .header__title {
+    text-align: left;
+    font-size: 48px;
+  }
+  span {
+    display: none;
+  }
+  .input {
+    width: 100%;
+    border-radius: 20px;
+    background-color: white;
+    color: rgb(156, 156, 156);
+  }
+  .icon {
+    display: none;
+  }
+  .card__image {
+    width: auto;
+    height: 160px;
+  }
+  .card__description {
+    text-align: left;
+    color: black;
+    font-size: 14px;
+  }
+  .card__price {
+    text-align: right;
+    color: black;
+    font-size: 18px;
+    font-weight: 700;
+  }
+  .product {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem;
+    margin: 1rem;
+  }
+  .product__image {
+    width: 540px;
+    height: 330px;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+  .product__title {
+    font-size: 28px;
+    font-weight: 500;
+    left: 32%;
+    top: 40%;
+  }
+  .product__description {
+    font-size: 16px;
+    left: 38%;
+    top: 50%;
+  }
+  .product__btn {
+    display: inline-block;
+    width: 220px;
+    height: 46px;
+    left: 28px;
+    top: 60%;
+    margin: 1rem 2rem;
+  }
+  .product__vector-l {
+    display: none;
+  }
+  .product__vector-r {
+    display: none;
+  }
+  .btn {
+    display: none;
+  }
+  .card-1,
+  .card-2,
+  .card-3,
+  .card-4,
+  .card-5,
+  .card-6,
+  .card-7,
+  .card-8,
+  .card-9,
+  .card-10 {
+    display: none;
+  }
+  .card-mobile {
+    display: inline-block;
+    width: 270px;
+    height: 290px;
+    padding: 2rem;
+  }
+  .card-mobile__image {
+    width: 100%;
+    padding: 2rem;
+  }
+  .card-mobile__button {
+    width: 100px;
+    height: 30px;
+    text-align: center;
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    float: right;
+    background: rgb(216, 19, 19);
+    border-radius: 28px;
+  }
+  .footer {
+    display: none;
+  }
+  .footer__mobile {
+    display: flex;
+    justify-content: space-around;
+    border-top: 1px solid rgb(156, 156, 156);
+    flex-direction: row;
+  }
+  .footer__icons {
+    padding: 4rem;
+  }
+  .section-2 {
+    width: 1400px;
+  }
+  .section-4 {
+    display: none;
+  }
+  .section-5 {
+    display: none;
+  }
+  .section-6 {
+    display: none;
+  }
 }/*# sourceMappingURL=main.css.map */
