--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,7 +2,7 @@
     @include flex ();
     
     background: $color-black;
-    padding: $p-2;
+    padding: $p-2 0;
     
     width: 100%;
     height: 20rem;
@@ -31,6 +31,15 @@
     }
 }
 
+.top1 {
+   display: inline-block;
+   justify-content: space-between;
+   align-items: center;
+
+    width: 100%;
+    margin: 0 10rem;
+  }
+
 .input {
     width: 459px;
     height: 56px;
@@ -57,6 +66,7 @@
     width: 50px;
     height: 50px;
     padding: $p-5;
+    
 
     &__description {
         
