--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -11,6 +11,10 @@
       margin: 0 auto;
     }
 
+  
+
+    
+
     .header {
       justify-content: left;
       width: 100%;
@@ -44,13 +48,17 @@
     }
 
     .card {
+      width: 352px;
+      height: 280px;
+      
+      margin: 1rem;
   
       &__image {
-          width: auto;
-          height: 160px;
+       display: flex;
       }
   
       &__description {
+        
           text-align: left;
           color: $color-black;
           font-size: $font-14;
@@ -132,21 +140,74 @@
     display: none;
   }
 
+  .banner3 {
+    display: none;
+  }
+
+  .banner1,
+  .banner2 {
+    display: flex;
+    
+  }
+
+  .card1 {
+
+    padding: $p-2;
+    margin: 0;
+    &__image {
+      width: 228px;
+      height: 222px;
+  }
+    
+    &__price {
+      font-size: $font-16;
+      
+
+      &_discont {
+  
+        font-size: $font-14;
+        
+      }
+  }
+
+  &__description {
+      
+      font-size: $font-16;
+  }
+  }
+
+  .star {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+
+    width: 100%;
+    padding: 2rem 0;
+  }
+
+  .card-top {
+      
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 100%;
+    padding: 2rem 0;
+  }
+
   .card-mobile {
     display: inline-block;
-    width: 270px;
+    width: 100%;
     height: 290px;
-
-    padding: 2rem;
 
     &__image {
       width: 100%;
       
-      padding: $p-2;
+      
   }
 
      &__button {
-       width: 100px;
+       width: 90px;
        height: 30px;
        text-align: center;
        display: inline-flex;
@@ -156,6 +217,7 @@
        float: right;
        background: $color-red;
        border-radius: 28px;
+       font-size: $font-14;
   }
 }
 
