--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -331,7 +331,7 @@ body {
   justify-content: space-between;
   align-items: center;
   background: black;
-  padding: 2rem;
+  padding: 2rem 0;
   width: 100%;
   height: 20rem;
   color: white;
@@ -351,6 +351,14 @@ body {
   cursor: pointer;
   background-color: yellow;
   border-radius: 10px;
+}
+
+.top1 {
+  display: inline-block;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 0 10rem;
 }
 
 .input {
@@ -454,9 +462,13 @@ body {
   .icon {
     display: none;
   }
+  .card {
+    width: 352px;
+    height: 280px;
+    margin: 1rem;
+  }
   .card__image {
-    width: auto;
-    height: 160px;
+    display: flex;
   }
   .card__description {
     text-align: left;
@@ -522,18 +534,54 @@ body {
   .card-10 {
     display: none;
   }
+  .banner3 {
+    display: none;
+  }
+  .banner1,
+  .banner2 {
+    display: flex;
+  }
+  .card1 {
+    padding: 2rem;
+    margin: 0;
+  }
+  .card1__image {
+    width: 228px;
+    height: 222px;
+  }
+  .card1__price {
+    font-size: 16px;
+  }
+  .card1__price_discont {
+    font-size: 14px;
+  }
+  .card1__description {
+    font-size: 16px;
+  }
+  .star {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    width: 100%;
+    padding: 2rem 0;
+  }
+  .card-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 2rem 0;
+  }
   .card-mobile {
     display: inline-block;
-    width: 270px;
+    width: 100%;
     height: 290px;
-    padding: 2rem;
   }
   .card-mobile__image {
     width: 100%;
-    padding: 2rem;
   }
   .card-mobile__button {
-    width: 100px;
+    width: 90px;
     height: 30px;
     text-align: center;
     display: inline-flex;
@@ -543,6 +591,7 @@ body {
     float: right;
     background: rgb(216, 19, 19);
     border-radius: 28px;
+    font-size: 14px;
   }
   .footer {
     display: none;
